# statsaphobia

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.py  decode.py  pyproject.toml  requirements.txt  ruff.toml  run.py
.github/workflows/: linting.yml  release.yml
src/statsaphobia/: __main__.py  backup.py  decrypt.py  diff.py  html.py  licence.py  main.py  watcher.py
src/statsaphobia/phasmophobia/: bot.py  decode.py  maps.py  plot.py
